--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
     "braintree-web-drop-in-react": "^1.2.1",
     "moment": "^2.29.0",
     "react": "^16.13.1",
+    "react-auto-image-slider": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-slideshow-image": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
