--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "react": "^16.13.1",
     "react-auto-image-slider": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
+    "react-script-tag": "^1.1.2",
     "react-scripts": "3.4.1",
     "react-slideshow-image": "^4.0.5"
   },
